[metadata]
name = un
version = 0.0.6
url = https://github.com/t-c-w/un
platforms = any
description_file = README.md
description = Analyzing classes
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = un

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

